--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==20.7
-pyyaml
-requests
-prometheus_client
-python-dotenv
+pyyaml==6.0.1
+aiohttp==3.9.1
+prometheus_client==0.19.0
+python-dotenv==1.0.0
