--- a/systemd/validator-bot.service
+++ b/systemd/validator-bot.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/root/Service
-Environment=TELEGRAM_BOT_TOKEN=your_token_here
+EnvironmentFile=/root/Service/.env
 ExecStart=/usr/bin/python3 bot/main.py
 Restart=always
 RestartSec=10
